# kinect2_network

./: README.md
bayes/: package.xml
data/012752450747/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
data/017479750447/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
data/038680345147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
data/500555142542/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
detection/: CMakeLists.txt  package.xml
detection/apps/: ground_based_people_detector_node.cpp
detection/include/open_ptrack/detection/impl/: ground_segmentation.hpp
detection/launch/: camera_poses.txt  detection_node_kinect2_a.launch  detector_depth_kinect2.launch  detector_kinect2.launch
kinect2_network/: CMakeLists.txt  package.xml
opt_calibration/: CMakeLists.txt  package.xml
opt_calibration/apps/: calibration_initializer.py  detection_initializer.py  listener.py
opt_calibration/conf/: camera_network.yaml  camera_poses.yaml
opt_calibration/include/open_ptrack/opt_calibration/: opt_calibration_node.h  ros_device.h
opt_calibration/launch/: opt_calibration_master.launch  opt_calibration_results.launch  opt_define_reference_frame.launch  sensor_kinect2_a.launch  sensor_kinect2_center.launch
opt_calibration/src/: opt_calibration_node.cpp  ros_device.cpp
opt_msgs/: CMakeLists.txt  package.xml
opt_utils/: CMakeLists.txt  package.xml
tracking/: CMakeLists.txt  package.xml
tracking/src/: tracker.cpp
